test/arrays/bradc/rankMismatch.future
error message: rank mismatches not flagged

It seems that rank mismatches are not currently flagged as being
errors.